--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^4.19.2",
+    "google-auth-library": "^10.5.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.4"
   },
@@ -17,4 +18,3 @@
     "dev": "nodemon app.js"
   }
 }
-
