--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
     "@supabase/supabase-js": "^2.81.1",
     "bcryptjs": "^3.0.3",
     "cookie-parser": "^1.4.7",
+    "cookie-session": "^2.1.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^4.19.2",
+    "express-session": "^1.18.2",
     "google-auth-library": "^10.5.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.19.4"
+    "mongoose": "^8.19.4",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
